--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "mongoose": "^6.9.1",
+    "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.4"
   }
